feat: bounded context subscriptions

--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ VITE_API_BASE_URL=http://localhost:3000
 # Endpoints
 VITE_COLLEAGUES_ENDPOINT_PATH=/colleagues
 VITE_RESTAURANTS_ENDPOINT_PATH=/restaurants
+VITE_SUBSCRIPTIONS_ENDPOINT_PATH=/subscriptions
 VITE_USERS_ENDPOINT_PATH=/users
 VITE_SIGNIN_ENDPOINT_PATH=/signin
 VITE_SIGNUP_ENDPOINT_PATH=/signup
+
